Editted index to match local file system

--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@ Here you will find links to my CISC 3610 assignments.
 
 <H3>Projects</H3>
 
-<a href="CISC_3610/CartoonHW.html"> Cartoon Assignment </a>
+<a href="CISC3610/CartoonHW.html"> Cartoon Assignment </a>
 <br>
-<a href="CISC_3610/Animation_Project/AnimationProject.html"> Animation </a>
+<a href="CISC3610/Animation_Project/AnimationProject.html"> Animation </a>
 <br>
-<a href="CISC_3610/Game_Project/GameProject.html"> Phaser Game </a>
+<a href="CISC3610/Game_Project/GameProject.html"> Phaser Game </a>
 <br>
-<a href="CISC_3610/Sound_Project/SoundProject.html"> Speech Recognition </a>
+<a href="CISC3610/Sound_Project/SoundProject.html"> Speech Recognition </a>
 <br>
 
 <H3>Labs</H3>
-<a href="CISC_3610/BarGraph.html"> Bar Graph </a>
+<a href="CISC3610/BarGraph.html"> Bar Graph </a>
 <br>
-<a href="CISC_3610/Animation_Lab/AnimationLab.html"> Animation 0-10 </a>
+<a href="CISC3610/Animation_Lab/AnimationLab.html"> Animation 0-10 </a>
 <br>
-<a href="CISC_3610/Form_Lab/Form.html"> Form </a>
+<a href="CISC3610/Form_Lab/Form.html"> Form </a>
 <br>
-<a href="CISC_3610/DragnDrop/main.html"> Drag and Drop </a>
+<a href="CISC3610/DragnDrop/main.html"> Drag and Drop </a>
 <br>
-<a href="CISC_3610/Resume_Lab/ResumeLab.html"> Resume </a>
+<a href="CISC3610/Resume_Lab/ResumeLab.html"> Resume </a>
 <br>
-<a href="CISC_3610/Sound_Machine/SoundMachine.html"> Sound Machine </a>
+<a href="CISC3610/Sound_Machine/SoundMachine.html"> Sound Machine </a>
 <br>
-<a href="CISC_3610/videoLab.html"> Video Lab </a>
+<a href="CISC3610/videoLab.html"> Video Lab </a>
 <br>
 
 
@@ -44,23 +44,23 @@ Here you will find links to my CISC 3610 assignments.
 <b>Bank Assignment:</b>
 <br>
 
-<a href="CISC_3115/Hw7/src/Hw7.java"> Main Class </a>
+<a href="CISC3115/Hw7/src/Hw7.java"> Main Class </a>
 <br>
-<a href="CISC_3115/Hw7/src/hw7Account.java"> Account Class </a>
+<a href="CISC3115/Hw7/src/hw7Account.java"> Account Class </a>
 <br>
-<a href="CISC_3115/Hw7/src/hw7CDAccount.java"> CD Account Class </a>
+<a href="CISC3115/Hw7/src/hw7CDAccount.java"> CD Account Class </a>
 <br>
-<a href="CISC_3115/Hw7/src/hw7CheckingAccount.java"> Checking Account Class </a>
+<a href="CISC3115/Hw7/src/hw7CheckingAccount.java"> Checking Account Class </a>
 <br>
-<a href="CISC_3115/Hw7/src/hw7SavingsAccount.java"> Savings Account Class </a>
+<a href="CISC3115/Hw7/src/hw7SavingsAccount.java"> Savings Account Class </a>
 <br>
-<a href="CISC_3115/Hw7/src/hw7Depositor.java"> Depositor Class </a>
+<a href="CISC3115/Hw7/src/hw7Depositor.java"> Depositor Class </a>
 <br>
-<a href="CISC_3115/Hw7/src/hw7Name.java"> Name Class </a>
+<a href="CISC3115/Hw7/src/hw7Name.java"> Name Class </a>
 <br>
-<a href="CISC_3115/Hw7/src/hw7Transaction.java"> Transaction Class </a>
+<a href="CISC3115/Hw7/src/hw7Transaction.java"> Transaction Class </a>
 <br>
-<a href="CISC_3115/Hw7/src/hw7DateInfo.java"> Date Info Class </a>
+<a href="CISC3115/Hw7/src/hw7DateInfo.java"> Date Info Class </a>
 <br><br>
 
 
