im an idiot in the wrong directory

--- a/CISC3610/Resume_Lab/Experience.html
+++ b/CISC3610/Resume_Lab/Experience.html
@@ -31,7 +31,7 @@
     </nav>
       
     <div class="container">
-    <h1>Education</h1>
+    <h1>Experience</h1>
     <br>
     <p> <b><ins>ALIGN COMMUNICATIONS, INC</ins></b> <br>
         <i>Part Time - Smarthand Support technician</i><br>
@@ -41,10 +41,6 @@
         <i>Technology Summer Intern</i><br>
         Assisted the IT department in improving the backup server; helped with basic
         Support Desk needs; set-up logins and built computers for users<br>
-        <br>
-        <b><ins>ALIGN COMMUNICATIONS, INC</ins></b> <br>
-        <i>Part Time - Smarthand Support technician</i><br>
-        Install new computer set-ups at partnered companies<br>
         <br>
         <b><ins>THE COOPER UNION ALBERT NERKEN SCHOOL OF ENGINEERING</ins></b> <br>
         <i>STEM Program in Saving the World: The Exploration of Sustainable Energy and Untapped Green Resources</i><br>
